--- a/package.json
+++ b/package.json
@@ -15,13 +15,15 @@
   "dependencies": {
     "@apollo/client": "^4.0.7",
     "@apollo/client-integration-nextjs": "^0.14.0",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "graphql": "^16.11.0",
     "lucide-react": "^0.460.0",
     "next": "15.5.5",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
