--- a/package.json
+++ b/package.json
@@ -14,16 +14,17 @@
   },
   "dependencies": {
     "@apollo/client": "^4.0.7",
-    "@apollo/client-integration-nextjs": "^0.14.0",
-    "class-variance-authority": "^0.7.1",
+    "@radix-ui/react-avatar": "^1.1.11",
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-label": "^2.1.8",
+    "@radix-ui/react-primitive": "^2.1.4",
+    "@radix-ui/react-separator": "^1.1.8",
     "clsx": "^2.1.1",
-    "cmdk": "^1.0.0",
     "graphql": "^16.11.0",
     "lucide-react": "^0.460.0",
     "next": "15.5.5",
     "react": "19.1.0",
-    "react-dom": "19.1.0",
-    "tailwind-merge": "^3.3.1"
+    "react-dom": "19.1.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
