--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
     "@radix-ui/react-label": "^2.1.8",
     "@radix-ui/react-primitive": "^2.1.4",
     "@radix-ui/react-separator": "^1.1.8",
+    "@radix-ui/react-tooltip": "^1.2.8",
     "clsx": "^2.1.1",
     "graphql": "^16.11.0",
     "lucide-react": "^0.460.0",
     "next": "15.5.5",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
